kubernetes/infra/components/seaweedfs-operator/configs/base/httproute-filer.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-filer
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - filer${ROUTE_SUFFIX}.${HOMELAB_INTERNAL_SUBDOMAIN}
  rules:
    - timeouts:
        request: 14400s
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seaweed-filer
          port: 8888
